More work on navigation. September sprint.

--- a/src/app/menus/main-menu-auth.component.html
+++ b/src/app/menus/main-menu-auth.component.html
@@ -1,27 +1,25 @@
 <header class="brand-lightest-grey">
   <div class="container mt-2 mb-2">
     <nav class="row">
-      <div class="col-4 col-sm-1 col-md-1">
+      <div class="col-12 col-sm-1">
         <a class="navbar-brand" routerLink="/">
           <img src="/assets/svgs/sipi-logo.svg" width="50" height="50" alt="">
         </a>
       </div>
-	  <div class="col-4 col-sm-1 col-md-1">
+	  <div class="col-4 col-sm-1">
 	    <a href="#">Categorias</a>
 	  </div>
-	  <div class="col-4 col-sm-1 col-md-1">
+	  <div class="col-4 col-sm-1">
 	    <a href="#">Lugares</a>
 	  </div>
-      <div class="col-12 col-sm-5 col-md-5">
+      <div class="col-12 col-sm-5">
         <search-form-b></search-form-b>
       </div>
-      <div class="col-4 col-sm-1 col-md-1">
-        <sign-up-button></sign-up-button>
+      <img alt="[User's] profile image" height="30" src="//dltxjt69z9a4k.cloudfront.net/images/jorge-bw-700.jpg" width="30">
+      <div class="col-12 col-sm-1">
+        <a class="nav-item nav-link" href="#">Jorge</a>
       </div>
-      <div class="col-4 col-sm-1 col-md-1">
-        <log-in-button></log-in-button>
-      </div>
-      <div class="col-4 col-sm-1 col-md-1">
+      <div class="col-4 col-sm-2">
         <review-button></review-button>
       </div>
     </nav>
