--- a/src/app/forms/search-form-b.component.html
+++ b/src/app/forms/search-form-b.component.html
@@ -1,5 +1,17 @@
-<form #f="ngForm" (ngSubmit)="runSearch(f)" class="row mt-1 mb-1" novalidate>
-  <ng2-completer class="left-input" name="place" type="text" placeholder="que? ejemplo: restaurantes, La Gastroteca" ngModel required #place="ngModel" [datasource]="places"></ng2-completer>
-  <ng2-completer class="right-input" name="location" type="text" placeholder="adonde? ejemplo: San Salvador, Antigua, Cuba" ngModel #location="ngModel" [datasource]="locations"></ng2-completer>
-  <button type="submit" class="btn btn-primary d-inline" routerLink="/busqueda"><i class="material-icons md-14">search</i></button>
+<form #f="ngForm" (ngSubmit)="runSearch(f)" novalidate>
+  <div class="row mt-1 mb-1">
+    <div class="col-12">
+      <div class="input-group">
+	    <!--
+        <ng2-completer name="place" type="text" placeholder="que? ejemplo: restaurantes, La Gastroteca" ngModel required #place="ngModel" [datasource]="places"></ng2-completer>
+        <ng2-completer name="location" type="text" placeholder="adonde? ejemplo: San Salvador, Antigua, Cuba" ngModel #location="ngModel" [datasource]="locations"></ng2-completer>
+		-->
+		<input type="text" class="form-control form-control-sm" placeholder="Que? Restaurantes, La Gastroteca" aria-label="Search for...">
+		<input type="text" class="form-control form-control-sm" placeholder="Adonde? San Salvador, Panama" aria-label="Search for...">
+        <span class="input-group-btn">
+          <button type="submit" class="btn btn-primary btn-sm" routerLink="/busqueda"><i class="material-icons md-14">search</i></button>
+        </span>
+      </div>
+    </div>	
+  </div>
 </form>
