--- a/src/assets/css/sipi.css
+++ b/src/assets/css/sipi.css
@@ -4632,24 +4632,10 @@ html {
 
 header {
   border-top: 3px solid #16A2B8;
-  border-bottom: 1px solid #f5f5f5;
-  /* targets the ng2completer input */ }
+  border-bottom: 1px solid #f5f5f5; }
   header ul {
     list-style: none;
     padding-left: 0; }
-  header .completer-input {
-    display: block;
-    width: 100%;
-    padding: .5rem .75rem;
-    font-size: 1rem;
-    line-height: 1.25;
-    color: #495057;
-    background-color: #fff;
-    background-image: none;
-    background-clip: padding-box;
-    border: 1px solid rgba(0, 0, 0, 0.15);
-    border-radius: .25rem;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s; }
   header .left-input {
     border-radius: 0 0 .25rem .25rem; }
 
