Wrapped up September sprint.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       <div class="col-12 col-sm-4 col-md-2 border-right">
         <h3 class="h6 underline">Sipi</h3>
 	<ul class="list">
-          <li><a routerLink="direccion">Direccion</a></li>
+          <li><a routerLink="mision">Mision</a></li>
           <li><a routerLink="contacto">Contacto</a></li>
         </ul>
       </div>
