--- a/src/app/buttons/review-button.component.html
+++ b/src/app/buttons/review-button.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary btn-sm my-2 my-sm-0" (click)="showReviewModal()" type="button"><!--<i class="material-icons md-8">create</i>&nbsp;-->Reseñar</button>
+<button class="btn btn-outline-primary btn-sm" (click)="showReviewModal()" type="button"><i class="material-icons md-8">create</i></button>
