--- a/src/app/menus/main-menu-a.component.html
+++ b/src/app/menus/main-menu-a.component.html
@@ -1,4 +1,4 @@
-<header class="brand-lightest-grey">
+<header class="brand-lightest-grey navbar fixed-top">
   <div class="container mt-1">
     <nav class="row">
       <sign-up-button class="col-5"></sign-up-button>
