--- a/src/app/menus/main-menu-auth.component.html
+++ b/src/app/menus/main-menu-auth.component.html
@@ -1,4 +1,4 @@
-<header class="brand-lightest-grey">
+<header class="brand-lightest-grey navbar sticky-top">
   <div class="container mt-2 mb-2">
     <nav class="row">
       <div class="col-12 col-sm-1">
