--- a/src/assets/sass/sipi/colors.scss
+++ b/src/assets/sass/sipi/colors.scss
@@ -1,5 +1,6 @@
 $brand-red: #dc3545;
-$brand-blue: #16a2b8;
+$brand-celeste: #16a2b8;
+$brand-blue: #007bff;
 $brand-green: #218838;
 $brand-grey: #868e96;
 $brand-white: #fff;
