--- a/src/app/pages/page-detail.component.html
+++ b/src/app/pages/page-detail.component.html
@@ -1,8 +1,9 @@
+<main-menu-auth></main-menu-auth>
+
 <div class="ui vertical masthead center aligned segment">
 
-	<div class="ui text container">
-		<h1 class="ui header">Pagina</h1>
-
-	</div>
+  <div class="ui text container">
+    <h1 class="ui header">Pagina</h1>
+  </div>
 
 </div>
