--- a/src/app/places/place-list.component.html
+++ b/src/app/places/place-list.component.html
@@ -12,7 +12,7 @@
 
   <div class="row">
     <div class="col-12 col-sm-12 col-md-8">
-      <div class="card bg-light mb-4" *ngFor="let place of places">  
+      <div class="card mb-4" *ngFor="let place of places">  
 	<!--
         <div class="card-header">
           <i class="material-icons">grade</i>
