Start of October sprint.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,10 @@
         <img src="/assets/svgs/sipi-logo.svg" width="60" height="60" alt="Sipi logo">
       </div>
       <div class="col-12 col-sm-4 col-md-2 border-right">
-        <h3 class="h6 underline">Sipi</h3>
+        <h3 class="h6 underline">Sobre</h3>
 	<ul class="list">
-          <li><a routerLink="mision">Mision</a></li>
-          <li><a routerLink="contacto">Contacto</a></li>
+          <li><a routerLink="sobre/mision">Mision</a></li>
+          <li><a routerLink="sobre/contacto">Contacto</a></li>
         </ul>
       </div>
       <div class="col-12 col-sm-4 col-md-2 border-right">
