--- a/src/app/buttons/log-in-button.component.html
+++ b/src/app/buttons/log-in-button.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary btn-sm my-2 my-sm-0" (click)="showLogInModal()">Acceder</button>
+<a (click)="showLogInModal()" routerLink="#"><i class="material-icons d-inline">account_box</i>Acceder</a>
