--- a/src/app/menus/main-menu-auth.component.html
+++ b/src/app/menus/main-menu-auth.component.html
@@ -6,20 +6,22 @@
           <img src="/assets/svgs/sipi-logo.svg" width="50" height="50" alt="">
         </a>
       </div>
-	  <div class="col-4 col-sm-1">
-	    <a href="#">Categorias</a>
-	  </div>
-	  <div class="col-4 col-sm-1">
-	    <a href="#">Lugares</a>
-	  </div>
-      <div class="col-12 col-sm-5">
+	  <ul class="navbar-nav">
+	    <li class="nav-item active">
+	      <a class="nav-link" routerLink="#" routerLinkActive="active">Categorias</a>
+		</li>
+	    <li class="nav-item">
+	      <a class="nav-link" routerLink="#" routerLinkActive="active">Lugares</a>
+		</li>
+      </ul>
+      <div class="col-12 col-sm-6">
         <search-form-b></search-form-b>
       </div>
       <img alt="[User's] profile image" height="30" src="//dltxjt69z9a4k.cloudfront.net/images/jorge-bw-700.jpg" width="30">
       <div class="col-12 col-sm-1">
         <a class="nav-item nav-link" href="#">Jorge</a>
       </div>
-      <div class="col-4 col-sm-2">
+      <div class="col-4 col-sm-1">
         <review-button></review-button>
       </div>
     </nav>
