--- a/src/assets/css/sipi.css
+++ b/src/assets/css/sipi.css
@@ -4931,7 +4931,7 @@ header {
     border-radius: 0 0 .25rem .25rem; }
 
 .card {
-  border-left: 3px solid #99caff; }
+  border-left: 3px solid #868e96; }
 
 section .filters {
   background-color: #caced1; }
