--- a/src/app/buttons/sign-up-button.component.html
+++ b/src/app/buttons/sign-up-button.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary btn-sm my-2 my-sm-0" (click)="showSignUpModal()">Registrarse</button>
+<a (click)="showSignUpModal()" routerLink="#"><i class="material-icons d-inline">account_box</i>Registrarse</a>
