--- a/src/app/pages/page-detail.component.html
+++ b/src/app/pages/page-detail.component.html
@@ -1,9 +1,18 @@
+<!-- renders main navigation, one of three versions -->
 <main-menu-auth></main-menu-auth>
 
-<div class="ui vertical masthead center aligned segment">
+<main class="container">
+  <div class="row mt-5 mb-5">
+    <div class="col-xs-12 col-sm-12 col-md-8">	
+      <div *ngIf="page">
 
-  <div class="ui text container">
-    <h1 class="ui header">Pagina</h1>
+        <breadcrumb-menu country="{{place.country}}" city="{{place.city}}"></breadcrumb-menu>
+
+        <h1>{{page.title}}</h1>
+		
+		<p>Some copy.</p>
+		
+      </div>
+    </div>
   </div>
-
-</div>
+</main>
