--- a/src/app/places/place-detail.component.html
+++ b/src/app/places/place-detail.component.html
@@ -11,13 +11,16 @@
   </div>
   -->
 
-  <div class="row mt-5 mb-5">
-    <div class="col-xs-12 col-sm-12 col-md-8">	
-      
-      <div *ngIf="place">
-
+  <div class="col-12 col-sm-12 col-md-8" *ngIf="place">
+  
+    <div class="row mt-5">
+	  <div class="col-12">
 	    <breadcrumb-menu country="{{place.country}}" city="{{place.city}}"></breadcrumb-menu>
-
+	  </div>
+	</div>
+	
+    <div class="row">
+	  <div class="col-12">
         <h1>{{place.name}}</h1>
         <span class="badge badge-pill badge-primary">Confirmado</span>
         <span class="badge badge-pill badge-primary">?Es este su negocio?</span>
@@ -27,11 +30,16 @@
           <i class="material-icons">grade</i>
           <i class="material-icons">grade</i>
         </div>
-
+		
         <div>
           <span><a href="#">Asiatico</a>,&nbsp;<a href="#">Mediterraneo</a>,&nbsp;<a href="#">Vegetariano</a></span>
         </div>
+		
+	  </div>
+	</div>
 
+    <div class="row">
+	  <div class="col-6">
         <address>
         {{place.address}}<br>
         {{place.city}}, {{place.country}}<br>
@@ -40,42 +48,42 @@
         <p>
           <span><i class="material-icons">phone</i>&nbsp;{{place.phone}}</span><br/>
 		  <i class="material-icons">web</i><a href="{{place.website}}">&nbsp;{{place.website}}</a>
-		</p>
-		
-        <h2 class="h5">Horario</h2>
-		
-        <place-schedule></place-schedule>
-	   
-        <span><a href="#">Obtener Direcciones</a></span>
-
-      </div><!-- ngIf="place" -->
-
-    </div>
-	
-    <div class="col-12 col-md-4">
-	  <div class="row">
-	    <div class="col-12">
-	      <h3 class="h4">Sipi sugerencias</h3>
-		  
-		  <!--
-          <div class="card mb-4">  
-            <div class="card-body">
-              <h2 class="card-title h4">
-                <a routerLink="#">Un Lugar Relacionado</a>
-              </h2>
-			  <span class="card-subtitle mb-2 text-muted">
-			    <a routerLink="#">Categoria 1</a>,&nbsp;
-			  </span>
-			  <small class="text-muted">18 personas blah blah</small>
-	        </div>
-          </div><!-- /.card -->
-		  
-		  
-		  
-		  
-	    </div>
+		</p>  
 	  </div>
-	</div>
+	  
+	  <div class="col-6">
+        <div id="map"></div> 
+	  </div>
+
+	  <div class="col-12">
+        <h2 class="h5">Horario</h2>
+        <place-schedule></place-schedule>  
+	  </div>
+	  
+    </div>
+
+  </div><!-- ngIf="place" -->
 	
+  <div class="col-12 col-sm-12 col-md-4">
+    <div class="row">
+      <div class="col-12">
+        <h3 class="h4">Sipi sugerencias</h3>
+
+			<!--
+			<div class="card mb-4">  
+			<div class="card-body">
+			<h2 class="card-title h4">
+			<a routerLink="#">Un Lugar Relacionado</a>
+			</h2>
+			<span class="card-subtitle mb-2 text-muted">
+			<a routerLink="#">Categoria 1</a>,&nbsp;
+			</span>
+			<small class="text-muted">18 personas blah blah</small>
+			</div>
+			</div><!-- /.card -->
+
+      </div>
+    </div>
   </div>
+
 </main>
