Nesting the masthead. Cleaning up some old masthead code.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<router-outlet></router-outlet>
+<router-outlet>
+  <main-menu-auth></main-menu-auth>
+</router-outlet>
 
 <footer class="outer-container brand-light-grey">
   <div class="container pt-4 pb-4">
