--- a/src/app/components/forms/filter-places-form.component.html
+++ b/src/app/components/forms/filter-places-form.component.html
@@ -1,7 +1,6 @@
 <section class="outer-container grey pt-3 pb-3">
   <form class="container">
     <div class="row">
-      <!-- staple filters
       <div class="col-4 col-sm-4 col-md-2 mb-3">
         <div aria-label="Basic example" class="btn-group" role="group">
           <button class="btn btn-secondary btn-sm" [class.btn-success]="enabled2" (click)="filterByPrice($event)" type="button">$</button>
@@ -19,7 +18,7 @@
         <button aria-controls="collapseExample" class="btn btn-secondary btn-sm" (click)="enabled1 = !enabled1" [class.btn-success]="enabled1" data-toggle="collapse" data-target="#collapse-filters, #collapse-filter" type="button">
           <i class="material-icons">filter_list</i>&nbsp;Mas Filtros
         </button>
-      </div> -->
+      </div>
     </div>
 
     <div class="row mt-3">
