Both place list and detail now querying from prod API.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,31 +11,33 @@
       <div class="col-12 col-sm-4 col-md-2 border-right">
         <h3 class="h6">Sipi</h3>
         <ul class="list">
-          <li><a routerLink="/busqueda">Búsqueda</a></li>
-          <li><a routerLink="/categorias">Categorias</a></li>
+          <li>
+            <a routerLink="/busqueda">Búsqueda</a>
+          </li>
+          <!-- <li><a routerLink="/categorias">Categorias</a></li> -->
           <!-- <li><a routerLink="eventos">Eventos</a></li> -->
         </ul>
       </div>
       <div class="col-12 col-sm-4 col-md-2 border-right">
-        <h3 class="h6">Soluciones Empresariales</h3>
+        <!-- <h3 class="h6">Soluciones Empresariales</h3>
         <ul class="list">
           <li><a routerLink="publicidad">Publicidad</a></li>
-        </ul>
+        </ul> -->
       </div>
       <div class="col-12 col-sm-3 col-md-3">
-        <h3 class="h6">Empresa</h3>
+        <!-- <h3 class="h6">Empresa</h3>
         <ul class="list">
           <li><a routerLink="sobre">Sobre Sipi</a></li>
           <li><a routerLink="contacto">Contacto</a></li>
-          <!-- <li><a routerLink="empleos">Empleos</a></li> -->
-        </ul>
+          <li><a routerLink="empleos">Empleos</a></li>
+        </ul> -->
       </div>
       <div class="col-12 col-md-3">
-        <p>
+        <!-- <p>
           <small>
             <a routerLink="politica-de-privacidad">Políza de Privacidad</a> | <a routerLink="condiciones-de-uso">Condiciones de Uso</a>
           </small>
-        </p>
+        </p> -->
         <p>
           <small>
             <em>Derechos Reservados &copy; 2018 Servicios Integrales Pro Imagen S.A de C.V</em>
