--- a/src/app/components/forms/sign-in-form.component.html
+++ b/src/app/components/forms/sign-in-form.component.html
@@ -45,4 +45,6 @@
       <button class="btn btn-block btn-primary" type="submit">Acceder con Facebook</button>
     </form>
   </div>
+
+  <button (click)="testClick()">Login</button>
 </div>
