--- a/src/app/components/menus/main-menu-auth.component.html
+++ b/src/app/components/menus/main-menu-auth.component.html
@@ -10,10 +10,10 @@
         <search-form-a class="nav-link"></search-form-a>
       </div>
       <div class="col-4 col-sm-4 col-md-2">
-        <a class="nav-item nav-link" href="/usuario/{{user.id}}">
+        <!-- <a class="nav-item nav-link" href="/usuario/{{user.id}}">
           <img alt="{{user.firstName}}'s profile image" class="d-md-inline" height="30" [src]="user.imageFileName" width="30">
           &nbsp;<span class="badge badge-danger">{{user.notifications.unseen}}</span>
-        </a>
+        </a> -->
       </div>
       <div class="grey col-12 col-sm-12 d-md-none d-lg-none d-xl-none">
         <search-form-b class="nav-link"></search-form-b>
