--- a/src/app/components/pages/home-page.component.html
+++ b/src/app/components/pages/home-page.component.html
@@ -1,5 +1,4 @@
 <section class="outer-container homepage-image">
-
   <div class="container pt-5 pb-5">
     <div class="row">
       <div class="col-12 text-center pt-5 mb-3">
@@ -10,53 +9,18 @@
       <search-form-a></search-form-a>
     </div>
     <div class="row">
-      <div class="col-12 text-center">
+      <!-- <div class="col-12 text-center">
         <small style="color: white">Foto: <a href="#">Tatayaki</a>, San Salvador</small>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
 
-<section class="container pt-5 pb-5">
+<section class="container pt-5">
   <div class="row">
     <div class="col-12 col-sm-12 col-md-8">
-      <h2>La comunidad urbana de Centroamerica y el Caribe</h2>
-      <p>Registrate para navegar tu ciudad, resenar lugares y llevar una vida mas plena</p>
-      <div class="row">
-        <div class="col-2 col-sm-2 col-md-2 mt-3">
-          <a routerLink="/usuario/0">
-            <img src="//pbs.twimg.com/profile_images/512109144434696192/L5DeMrpA_400x400.jpeg" class="img-fluid">
-          </a>
-        </div>
-        <div class="col-2 col-sm-2 col-md-2 mt-3">
-          <a routerLink="/usuario/0">
-            <img src="//pressroom.ups.com/mobile0c9a66/assets/img/leadership/juan_perez_lo_res.jpg" class="img-fluid">
-          </a>
-        </div>
-        <div class="col-2 col-sm-2 col-md-2 mt-3">
-          <a routerLink="/usuario/0">
-            <img src="//dltxjt69z9a4k.cloudfront.net/images/jorge-bw-700.jpg" class="img-fluid">
-          </a>
-        </div>
-        <div class="col-2 col-sm-2 col-md-2 mt-3">
-          <a routerLink="/usuario/0">
-            <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAXwAAAAJGRkNTcwZGEyLTQ0YzYtNGMxYy04MWY4LTVlYmQwNDEzZTU0Mg.jpg" class="img-fluid">
-          </a>
-        </div>
-        <div class="col-2 col-sm-2 col-md-2 mt-3">
-          <a routerLink="/usuario/0">
-            <img src="https://scontent.fzag2-1.fna.fbcdn.net/v/t1.0-9/10366289_648036468605718_8466298691895619777_n.jpg?oh=683fa5336dbde0a95557b528c48e2cf7&oe=5AC4B60A" class="img-fluid">
-          </a>
-        </div>
-        <div class="col-2 col-sm-2 col-md-2 mt-3">
-          <a routerLink="/usuario/0">
-            <img src="https://scontent.fzag2-1.fna.fbcdn.net/v/t1.0-9/10644997_10154604529495366_2786593036343206524_n.jpg?oh=9c2aa6c1b1e98d5947aaaf5822034496&oe=5AC30DD0" class="img-fluid">
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-sm-12 col-md-4">
-      <place-card-featured></place-card-featured>
+      <h2>La aplicación urbana de Centroamerica y el Caribe</h2>
+      <p>Sipi te permite interactuar con tus ciudades como nunca antes posible.</p>
     </div>
   </div>
 </section>
@@ -69,256 +33,15 @@
   </div>
 </div>
 
-<section class="container">
+<section class="container pb-5">
   <div class="row">
-    <div class="col-8">
+    <div class="col-12 col-sm-6">
       <h3>Lugares Populares</h3>
-      <p>Lo recomendado, de parte de la comunidad Sipi. Pellentesque ac lorem ut nunc elementum pulvinar ac nec diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
+      <p></p>
     </div>
-  </div>
-</section>
-
-<section class="container pt-3 pb-3">
-  <div class="row">
-    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-<div class="card-body">
-  <div class="row">
-    <div class="col-12">
-      <h2 class="card-title h4">
-        <a routerLink="/" href="#">Andalucia</a>
-      </h2>
-      <img alt="Foto de" class="card-img-left img-fluid mb-2" src="https://cdn.cnn.com/cnnnext/dam/assets/170302153529-garlic-crab-full-169.jpg">
-      <div>
-        <i class="material-icons stars">grade</i>
-        <i class="material-icons stars">grade</i>
-        <i class="material-icons stars">grade</i>
-        <i class="material-icons stars">grade</i>
-      </div>
-      <span>$$&nbsp;|&nbsp;</span>
-      <span class="card-subtitle mb-2 text-muted">
-        <a href="#" routerLink="/busqueda">Vegetariano</a>,&nbsp;
-        <a href="#" routerLink="/busqueda">Mariscos</a>
-      </span>
-    </div>
-    <div class="col-12">
-      <address class="card-text">
-        1234 Calle Principal<br>
-        San Salvador, El Salvador <br>
-      </address>
-    </div>
-    <div class="col-12 mt-3">
-      <q>
-        Buenisimos postres, y la comida principal estaba muy buena. Recomendado sin duda.
-      </q>
-    </div>
-  </div>
-</div>
-    </div>
-    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-<div class="card-body">
-  <div class="row">
-    <div class="col-12">
-      <h2 class="card-title h4">
-        <a routerLink="/" href="#">Tatayaki</a>
-      </h2>
-      <img alt="Foto de" class="card-img-left img-fluid mb-2" src="https://1.bp.blogspot.com/-nT2XdAieEIU/V44O7smLNwI/AAAAAAAAADs/Ln9tBtLIOCIn60J8NYt4eptGmJ01ZSlzgCLcB/s1600/Affordable%2Band%2Bdelicious%2BIndian%2Bfood%2Bin%2BBasingstoke.jpg">
-      <div>
-        <i class="material-icons stars">grade</i>
-        <i class="material-icons stars">grade</i>
-        <i class="material-icons stars">grade</i>
-      </div>
-      <span>$$&nbsp;|&nbsp;</span>
-      <span class="card-subtitle mb-2 text-muted">
-        <a href="#" routerLink="/busqueda">Japones</a>,&nbsp;
-        <a href="#" routerLink="/busqueda">Asiatico</a>
-      </span>
-    </div>
-    <div class="col-12">
-      <address class="card-text">
-        Avenida Norte 17<br>
-        Antigua, Guatemala<br>
-      </address>
-    </div>
-    <div class="col-12 mt-3">
-      <q>
-        El sushi es excelente en este lugar.
-      </q>
-    </div>
-  </div>
-</div>
-    </div>
-    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-<div class="card-body">
-  <div class="row">
-    <div class="col-12">
-      <h2 class="card-title h4">
-        <a routerLink="/" href="#">Cala</a>
-      </h2>
-      <img alt="Foto de" class="card-img-left img-fluid mb-2" src="https://handluggageonly.co.uk/wp-content/uploads/2015/09/bibimbap.jpg">
-      <div>
-        <i class="material-icons stars">grade</i>
-        <i class="material-icons stars">grade</i>
-      </div>
-      <span>$$&nbsp;|&nbsp;</span>
-      <span class="card-subtitle mb-2 text-muted">
-        <a href="#" routerLink="/busqueda">Hindu</a>,&nbsp;
-        <a href="#" routerLink="/busqueda">Asiatico</a>
-      </span>
-    </div>
-    <div class="col-12">
-      <address class="card-text">
-        1234 Calle Principal<br>
-        San Salvador, El Salvador <br>
-      </address>
-    </div>
-    <div class="col-12 mt-3">
-      <q>
-        No lo recomiendo: es muy caro y el servicio es pesimo.
-      </q>
-    </div>
-  </div>
-</div>
-    </div>
-    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-<div class="card-body">
-  <div class="row">
-    <div class="col-12">
-      <h2 class="card-title h4">
-        <a routerLink="/" href="#">Cristobal</a>
-      </h2>
-      <img alt="Foto de" class="card-img-left img-fluid mb-2" src="http://www.wallpaperspick.com/wp-content/uploads/2015/10/Delicious-Lunch-Food-Indian-Thali-HD-Wallpaper-04189.jpg">
-      <div>
-        <i class="material-icons stars">grade</i>
-        <i class="material-icons stars">grade</i>
-        <i class="material-icons stars">grade</i>
-        <i class="material-icons stars">grade</i>
-        <i class="material-icons stars">grade</i>
-      </div>
-      <span>$$&nbsp;|&nbsp;</span>
-      <span class="card-subtitle mb-2 text-muted">
-        <a href="#" routerLink="/busqueda">Hindu</a>,&nbsp;
-        <a href="#" routerLink="/busqueda">Asiatico</a>
-      </span>
-    </div>
-    <div class="col-12">
-      <address class="card-text">
-        Avenida Revolucion 189<br>
-        La Havana, Cuba <br>
-      </address>
-    </div>
-    <div class="col-12 mt-3">
-      <q>
-        El mejor restaurante de Cuba.
-      </q>
-    </div>
-  </div>
-</div>
-    </div>
-  </div>
-</section>
-
-<div class="container mt-2 mb-2">
-  <div class="row">
-    <div class="col-12">
-      <hr>
-    </div>
-  </div>
-</div>
-
-
-<section class="container">
-  <div class="row">
-    <div class="col-12 col-sm-12 col-md-8">
+    <div class="col-12 col-sm-6">
       <h3>Ciudades Populares</h3>
       <p>Las ciudades adonde mayor accion hay en este momento. Pellentesque ac lorem ut nunc elementum pulvinar ac nec diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
     </div>
   </div>
 </section>
-
-<section class="container pt-3 pb-3">
-  <div class="row">
-    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-      <div class="card">
-        <img class="img-fluid" src="https://ssl.c.photoshelter.com/img-get/I00002hkXpJn9kdE/s/650/650/San-Salvador-2b.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4>
-            <a routerLink="">San Salvador</a>
-          </h4>
-          <p class="card-text">Una ciudad de belleza natural y gran comercio. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dignissim luctus eros, sit amet tempor lacus maximus sit amet. Cras quis commodo lectus.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-      <div class="card">
-        <img class="img-fluid d-none d-sm-block" src="https://www.ixchelschool.com/images/antigua-guatemala/arch-04-992x744.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4>
-            <a routerLink="">Antigua</a>
-          </h4>
-          <p class="card-text">Unas de las ciudades mas viejas de centroamerica, y de las mas bellas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dignissim luctus eros, sit amet tempor lacus maximus sit amet. Cras quis commodo lectus.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-      <div class="card">
-        <img class="img-fluid" src="http://passportto.iberostar.com/wp-content/uploads/2013/12/CAR_LaHAbana.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4>
-            <a routerLink="">La Havana</a>
-          </h4>
-          <p class="card-text">La perla del caribe; una ciudad con siglos de historia y blah blah. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dignissim luctus eros, sit amet tempor lacus maximus sit amet. Cras quis commodo lectus.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-      <div class="card">
-        <img class="img-fluid" src="https://www.riu.com/en/binaris/casco-viejo_tcm55-47797.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h4>
-            <a routerLink="">Ciudad de Panama</a>
-          </h4>
-          <p class="card-text">La ciudad mas moderna de centroamerica, y con la mejor comida internacional. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dignissim luctus eros, sit amet tempor lacus maximus sit amet. Cras quis commodo lectus.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- <div class="container mt-2 mb-2">
-  <div class="row">
-    <div class="col-12">
-      <hr>
-    </div>
-  </div>
-</div> -->
-
-
-<!-- <main class="container">
-  <div class="row mt-5 mb-5">
-    <div class="col-md-4">
-      <h3>
-        <a routerLink="">Sushi en San Salvador</a>
-      </h3>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-primary" routerLink="" role="button">Leer el articulo</a></p>
-    </div>
-    <div class="col-md-4">
-      <h3>
-        <a routerLink="">Surfeando en Belize</a>
-      </h3>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p>
-        <a class="btn btn-primary" routerLink="" role="button">Leer el articulo</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h3>
-        <a routerLink="">La vida nocturna Hondurena</a>
-      </h3>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>
-        <a class="btn btn-primary" routerLink="" role="button">Leer el articulo</a>
-      </p>
-    </div>
-  </div>
-</main> -->
