--- a/src/app/components/forms/search-form-b.component.html
+++ b/src/app/components/forms/search-form-b.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="search" (ngSubmit)="onSubmit(search)" novalidate>
+<!-- <form [formGroup]="search" (ngSubmit)="onSubmit(search)" novalidate>
   <div class="row mt-1 mb-1">
     <div class="col-12">
       <div class="input-group">
@@ -10,6 +10,6 @@
           </button>
         </span>
       </div>
-    </div>	
+    </div>
   </div>
-</form>
+</form> -->
