--- a/src/app/components/places/place-detail.component.html
+++ b/src/app/components/places/place-detail.component.html
@@ -9,7 +9,7 @@
             <span class="d-none d-sm-none d-md-inline d-lg-inline d-xl-inline">&nbsp;Informacion</span>
           </a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" id="map-tab" data-toggle="tab" href="#map" role="tab" aria-controls="map" aria-selected="false">
             <i class="material-icons md-18 align-top">public</i>
             <span class="d-none d-sm-none d-md-inline d-lg-inline d-xl-inline">&nbsp;Mapa</span>
@@ -20,7 +20,7 @@
             <i class="material-icons md-18 align-top">create</i>
             <span class="d-none d-sm-none d-md-inline d-lg-inline d-xl-inline">&nbsp;Editar</span>
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
