--- a/src/app/components/places/place-list.component.html
+++ b/src/app/components/places/place-list.component.html
@@ -1,11 +1,6 @@
-<filter-places-form (priceChanged)="filterByPrice($event)" (pricePredicateChanged)="handlePricePredicateChanged($event)"></filter-places-form>
+<!-- <filter-places-form (priceChanged)="filterByPrice($event)" (pricePredicateChanged)="handlePricePredicateChanged($event)"></filter-places-form> -->
 
-<div class="container mb-5">
-  <div class="row mt-3 mb-3">
-    <div class="col-10">
-      <h1 class="h3">Los mejores {{category}} en {{city}}</h1>
-    </div>
-  </div>
+<div class="container mt-5 mb-5">
 
   <div class="row d-block d-sm-block d-md-none d-lg-none d-xl-none mb-5">
     <div class="col-12">
@@ -27,8 +22,8 @@
   <div class="row">
     <div class="col-12 col-sm-12 col-md-7 tab-pane fade show active" id="list">
 
-      <sort-places-form (predicateChanged)="handlePredicateChanged($event)"></sort-places-form>
-      <div class="border-top-0 border-left-0 border-right-0 card mb-4" [@animating]="state" *ngFor="let place of places | priceFilter: price | orderBy: orderPredicate: reverseOrder | paginate: { itemsPerPage: 10, currentPage: p }">
+      <!-- <sort-places-form (predicateChanged)="handlePredicateChanged($event)"></sort-places-form> -->
+      <div class="border-top-0 border-left-0 border-right-0 card mb-4" *ngFor="let place of places | orderBy: orderPredicate: reverseOrder | paginate: { itemsPerPage: 10, currentPage: p }">
         <place-card [place]="place"></place-card>
       </div>
       <pagination-controls nextLabel="Proximo" (pageChange)="p = $event" previousLabel="Anterior"></pagination-controls>
