Ran prod build.

--- a/src/app/components/menus/pagination-menu.component.html
+++ b/src/app/components/menus/pagination-menu.component.html
@@ -1,1 +1,1 @@
-<pagination-controls nextLabel="Proximo" (pageChange)="p = $event" previousLabel="Anterior"></pagination-controls>
+<pagination-controls nextLabel="Próximo" (pageChange)="p = $event" previousLabel="Anterior"></pagination-controls>
