--- a/src/app/components/places/place-card.component.html
+++ b/src/app/components/places/place-card.component.html
@@ -23,7 +23,7 @@
         {{place.address.number}} {{place.address.street}} <br>
         {{place.address.city}}, {{place.address.country}} <br>
         <i class="material-icons align-top">phone</i>
-        <a href="tel:{{place.phone}}">&nbsp;{{place.contact.phone}}</a>
+        <a href="tel:{{place.contact.phone}}">&nbsp;{{place.contact.phone}}</a>
       </address>
     </div>
   </div>
