--- a/src/app/components/places/place-list.component.html
+++ b/src/app/components/places/place-list.component.html
@@ -10,11 +10,11 @@
             <i class="material-icons md-18 align-top">list</i>
           </a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" id="map-tab" data-toggle="tab" href="#map" role="tab" aria-controls="profile" aria-selected="false">
             <i class="material-icons md-18 align-top">public</i>
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
